--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,8 +28,10 @@ jobs:
         distribution: 'corretto'
         cache: maven
     - name: Build with Maven
-      run:  mvn javadoc:javadoc
+      run:  mvn -B package --file pom.xml
+    - name: Generate Javadoc
+      run: mvn javadoc:javadoc
     - name: Publish Javadoc
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        folder: target/docs/javadoc
+          folder: target/docs/javadoc
